--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="Estilos.css" type="text/css">
     <title>Document</title>
 </head>
+
 <body>
     
+    <div id="contenedor">
+
+        <header>
+
+        </header>
+
+        <nav id="menu">
+
+        </nav>
+
+        <section id="minijuegos">
+
+        </section>
+
+        <aside id="noticias">
+
+        </aside>
+
+        <footer id="pie">
+            
+        </footer>
+
+    </div>
+
 </body>
+
 </html>
