--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="Estilos.css" type="text/css">
-    <title>Document</title>
+    <title>Enjoy Life</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
         </aside>
 
         <footer id="pie">
-            
+
         </footer>
 
     </div>
