--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="Estilos.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <title>Enjoy Life</title>
 </head>
 
@@ -14,7 +15,7 @@
     <div id="contenedor">
 
         <header>
-
+            <i class="fas fa-search"></i>
         </header>
 
         <nav id="menu">
