--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <div class="item-nav"><a href="#">Inicio</a></div>
             <div class="item-nav"><a href="">Categoria</a></div>
-            <div class="item-nav"><a href="">Contacto</a></div>
+            <div class="item-nav"><a href="pages/contact.html">Contacto</a></div>
             <div class="item-nav search-flex">
                 <input type="text">
                 <div class="icon-search">
