--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,7 +23,7 @@
 
   <nav class="top-nav">
 
-      <div class="item-nav"><a href="#">Inicio</a></div>
+      <div class="item-nav"><a href="../index.html">Inicio</a></div>
       <div class="item-nav"><a href="">Categoria</a></div>
       <div class="item-nav"><a href="">Contacto</a></div>
       <div class="item-nav search-flex">
